# TriggerTime

./: CMakeLists.txt  COPYING  README.md  cmake_Win32_VS2013.bat  cmake_Win32_VS2019.bat  cmake_i386_debug.sh  cmake_i386_release.sh  cmake_steam_amd64.sh  cmake_steam_i386.sh  cmake_x64_release.sh
Box2D_v2.3.0/: Android.mk  CMakeLists.txt
Box2D_v2.3.0/Collision/: b2DynamicTree.cpp
Box2D_v2.3.0/Common/: b2BlockAllocator.cpp
LuaJIT-2.0.4/: CMakeLists.txt
afutil/: Android.mk  AndroidAppender.cpp  AudioDevice.cpp  AudioListener.cpp  AudioOggFile.cpp  AudioSound.cpp  AudioSourceImpl.cpp  AudioStream.cpp  CMakeLists.txt  EnumTraits.cpp  GdxP.cpp  Logger.cpp  Logger.h  OAL.cpp  PNGDecoder.cpp  PNGUtils.cpp  PNGUtils.h  RUBEBase.cpp  RUBEBody.cpp  RUBEFixture.cpp  RUBEImage.cpp  RUBEJoint.cpp  RUBEObject.cpp  RUBEWorld.cpp  SequentialAppConfig.cpp  StreamAppConfig.cpp  TPS.cpp  Utils.cpp
android/: AndroidManifest.xml  build.xml
android/jni/: Android.mk  Application.mk
apidoc/: CMakeLists.txt  config.ld
apidoc/api/: AudioManager.lua  AudioSource.lua  CameraComponent.lua  CollisionCookieFilter.lua  CollisionFilter.lua  CollisionSensorComponent.lua  Component.lua  DialogComponent.lua  DistanceJointProxy.lua  FollowPathComponent.lua  FrictionJointProxy.lua  GearJointProxy.lua  (+29 more)
boost_1_55_0/: Android.mk  CMakeLists.txt
freetype-2.6.2/: CMakeLists.txt
game/: AcidWormComponent.cpp  AcidWormComponent.h  AcidballComponent.cpp  AcidballComponent.h  Android.mk  Animation.cpp  Animation.h  AnimationComponent.cpp  AnimationComponent.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  AudioSourceDummy.cpp  AudioSourceDummy.h  BabySpiderComponent.cpp  BabySpiderComponent.h  BarrelComponent.cpp  BarrelComponent.h  BeetleComponent.cpp  BeetleComponent.h  BehaviorAvoidComponent.cpp  BehaviorAvoidComponent.h  BehaviorComponent.cpp  BehaviorComponent.h  BehaviorDetourComponent.cpp  BehaviorDetourComponent.h  BehaviorInterceptComponent.cpp  BehaviorInterceptComponent.h  BehaviorRoamComponent.cpp  BehaviorRoamComponent.h  BehaviorSeekComponent.cpp  BehaviorSeekComponent.h  BlasterShotComponent.cpp  BlasterShotComponent.h  BloodComponent.cpp  BloodComponent.h  BoatComponent.cpp  BoatComponent.h  BossBeholderComponent.cpp  (+564 more)
game/assets/: acid1.p  acidball.json  acidworm.json  anim_demo.json  anim_demo.lua  baby_spider.json  barrel1.json  barrel1_gibbed.json  barrel2.json  barrel2_gibbed.json  barrel3.json  barrel3_gibbed.json  beetle.json  beetle_gibbed.json  boat.json  boss_beholder.json  boss_buddy.json  boss_buddy_tongue.json  boss_chopper.json  boss_coreprotector.json  boss_natan.json  boss_queen.json  boss_skull.json  boss_squid.json  boss_squid_eye.json  buckshot.json  bullet1.json  bullet1.p  bullet2.json  centipede.json  common1.json  common2.json  config_android.ini  crate1.json  crate1_gibbed.json  crate2.json  crate2_gibbed.json  crate3.json  crate3_gibbed.json  crate4.json  (+416 more)
game/assets/anim/: acidworm_attack.json  acidworm_def.json  arrow.json  badkeeper_angry.json  badkeeper_crawlout.json  badkeeper_death.json  badkeeper_def.json  badkeeper_gun.json  badkeeper_melee.json  badkeeper_missile.json  badkeeper_plasma.json  badkeeper_postplasma.json  badkeeper_preplasma.json  badkeeper_walk.json  beetle_def.json  beetle_die.json  beetle_mask_def.json  beetle_mask_die.json  belt1.json  bigspider_attack.json  bigspider_def.json  blood.json  cam_rec.json  centipede_attack.json  centipede_def.json  centipede_lowerleg1.json  centipede_lowerleg2.json  centipede_upperleg1.json  centipede_upperleg2.json  enforcer_legs_def.json  enforcer_torso_def.json  enforcer_torso_die.json  enforcer_torso_mask_def.json  enforcer_torso_mask_die.json  fireball_boom.json  fireball_def.json  flash.json  gas1.json  goo1.json  gorger_angry.json  (+146 more)
game/assets/modules/: rot.lua  startup.lua  startup_beta.lua  transform.lua  ui_utils.lua  utils.lua  vec2.lua
game/assets/ui/: achievements.rml  audio.rml  base.rml  brightness.rml  completed.rml  controls.rml  credits.rml  cursor.rml  dialog.rml  dummy.rml  endofdemo.rml  gameover.rml  gamepad.rml  logo.rml  main_menu.rml  options.rml  pause.rml  play.rml  poster.rml  rkt.rcss  shop.rml  skill.rml  tt.rcss  video.rml  window.rml
game/res/: acidball.rube  acidworm.rube  anim_demo.rube  baby_spider.rube  barrel1.rube  barrel1_gibbed.rube  barrel2.rube  barrel2_gibbed.rube  barrel3.rube  barrel3_gibbed.rube  beetle.rube  beetle_gibbed.rube  boat.rube  boss_beholder.rube  boss_buddy.rube  boss_buddy_tongue.rube  boss_chopper.rube  boss_coreprotector.rube  boss_natan.rube  boss_queen.rube  boss_skull.rube  boss_squid.rube  boss_squid_eye.rube  buckshot.rube  bullet1.rube  bullet2.rube  centipede.rube  common1.tps  common2.tps  crate1.rube  crate1_gibbed.rube  crate2.rube  crate2_gibbed.rube  crate3.rube  crate3_gibbed.rube  crate4.rube  crate4_gibbed.rube  creature1.rube  creature10.rube  creature2.rube  (+292 more)
game/rube/: createObjectProps.rs  createSceneProps.rs  objectPropFilter.rs  scenePropFilter.rs
game/rube/scripts/: alignJoints.rs  changeBodyPos.rs  changeRadius.rs  circleToLine.rs  ellipseToLine.rs  fixJoints.rs  flipVerticesHorz.rs  flipWeldJoints.rs  layout.json  lineToCircle.rs  makeBuddyMain.rs  makeBuddySide.rs  makeRope.rs  query.rs  rotateBy.rs  rotateBy2.rs  selectBodyJoints.rs  selectFixtureVertices.rs  setVertices.rs  translateToCOM.rs  weld2.rs
include/: pnglibconf.h
jsoncpp/: Android.mk  CMakeLists.txt
libRocket/: CMakeLists.txt
libRocket/Include/Rocket/Core/Lua/: lua.hpp
libRocket/Source/Core/Lua/: Document.cpp  Element.cpp  GlobalLuaFunctions.cpp
libpng-1.6.8/: Android.mk  CMakeLists.txt  pngpriv.h  pngrutil.c
log4cplus-1.1.0/: Android.mk  CMakeLists.txt
lua-5.1.5/: Android.mk  CMakeLists.txt
luabind-0.9.1/: Android.mk  CMakeLists.txt  weak_ref.cpp
ogg-1.3.2/: Android.mk  CMakeLists.txt
openal-soft/: Android.mk  README.txt  config.h
parted/: run-parted-latest.sh  run-parted.bat  run-parted.sh
poly2tri/: Android.mk  CMakeLists.txt
vorbis-1.3.5/: Android.mk  CMakeLists.txt
zlib-1.2.8/: CMakeLists.txt
(+60 files in other folders)
