# from git: f164420c505a073fc878be9b5e238e3a2a2955f8 Merge pull request #270 from Dinno/master

set(Core_SRC_FILES
    Source/Core/BaseXMLParser.cpp
    Source/Core/Box.cpp
    Source/Core/Clock.cpp
    Source/Core/Context.cpp
    Source/Core/ContextInstancer.cpp
    Source/Core/ContextInstancerDefault.cpp
    Source/Core/ConvolutionFilter.cpp
    Source/Core/Core.cpp
    Source/Core/Decorator.cpp
    Source/Core/DecoratorInstancer.cpp
    Source/Core/DecoratorNone.cpp
    Source/Core/DecoratorNoneInstancer.cpp
    Source/Core/DecoratorTiled.cpp
    Source/Core/DecoratorTiledBox.cpp
    Source/Core/DecoratorTiledBoxInstancer.cpp
    Source/Core/DecoratorTiledHorizontal.cpp
    Source/Core/DecoratorTiledHorizontalInstancer.cpp
    Source/Core/DecoratorTiledImage.cpp
    Source/Core/DecoratorTiledImageInstancer.cpp
    Source/Core/DecoratorTiledInstancer.cpp
    Source/Core/DecoratorTiledVertical.cpp
    Source/Core/DecoratorTiledVerticalInstancer.cpp
    Source/Core/Dictionary.cpp
    Source/Core/DocumentHeader.cpp
    Source/Core/Element.cpp
    Source/Core/ElementBackground.cpp
    Source/Core/ElementBorder.cpp
    Source/Core/ElementDecoration.cpp
    Source/Core/ElementDefinition.cpp
    Source/Core/ElementDocument.cpp
    Source/Core/ElementHandle.cpp
    Source/Core/ElementImage.cpp
    Source/Core/ElementInstancer.cpp
    Source/Core/ElementReference.cpp
    Source/Core/ElementScroll.cpp
    Source/Core/ElementStyle.cpp
    Source/Core/ElementStyleCache.cpp
    Source/Core/ElementText.cpp
    Source/Core/ElementTextDefault.cpp
    Source/Core/ElementUtilities.cpp
    Source/Core/Event.cpp
    Source/Core/EventDispatcher.cpp
    Source/Core/EventInstancer.cpp
    Source/Core/EventInstancerDefault.cpp
    Source/Core/EventListenerInstancer.cpp
    Source/Core/Factory.cpp
    Source/Core/FileInterface.cpp
    Source/Core/FileInterfaceDefault.cpp
    Source/Core/FontDatabase.cpp
    Source/Core/FontEffect.cpp
    Source/Core/FontEffectInstancer.cpp
    Source/Core/FontEffectNone.cpp
    Source/Core/FontEffectNoneInstancer.cpp
    Source/Core/FontEffectOutline.cpp
    Source/Core/FontEffectOutlineInstancer.cpp
    Source/Core/FontEffectShadow.cpp
    Source/Core/FontEffectShadowInstancer.cpp
    Source/Core/FontFace.cpp
    Source/Core/FontFaceHandle.cpp
    Source/Core/FontFaceLayer.cpp
    Source/Core/FontFamily.cpp
    Source/Core/FontProvider.cpp
    Source/Core/FreeType/FontFace.cpp
    Source/Core/FreeType/FontFaceHandle.cpp
    Source/Core/FreeType/FontFamily.cpp
    Source/Core/FreeType/FontProvider.cpp
    Source/Core/BitmapFont/FontParser.cpp
    Source/Core/BitmapFont/FontFace.cpp
    Source/Core/BitmapFont/FontFaceHandle.cpp
    Source/Core/BitmapFont/FontFaceLayer.cpp
    Source/Core/BitmapFont/FontFamily.cpp
    Source/Core/BitmapFont/FontProvider.cpp
    Source/Core/Geometry.cpp
    Source/Core/GeometryDatabase.cpp
    Source/Core/GeometryUtilities.cpp
    Source/Core/LayoutBlockBox.cpp
    Source/Core/LayoutBlockBoxSpace.cpp
    Source/Core/LayoutEngine.cpp
    Source/Core/LayoutInlineBox.cpp
    Source/Core/LayoutInlineBoxText.cpp
    Source/Core/LayoutLineBox.cpp
    Source/Core/Log.cpp
    Source/Core/Math.cpp
    Source/Core/Plugin.cpp
    Source/Core/PluginRegistry.cpp
    Source/Core/precompiled.cpp
    Source/Core/Property.cpp
    Source/Core/PropertyDefinition.cpp
    Source/Core/PropertyDictionary.cpp
    Source/Core/PropertyParserColour.cpp
    Source/Core/PropertyParserKeyword.cpp
    Source/Core/PropertyParserNumber.cpp
    Source/Core/PropertyParserString.cpp
    Source/Core/PropertySpecification.cpp
    Source/Core/ReferenceCountable.cpp
    Source/Core/RenderInterface.cpp
    Source/Core/Stream.cpp
    Source/Core/StreamFile.cpp
    Source/Core/StreamMemory.cpp
    Source/Core/String.cpp
    Source/Core/StringCache.cpp
    Source/Core/StringUtilities.cpp
    Source/Core/StyleSheet.cpp
    Source/Core/StyleSheetFactory.cpp
    Source/Core/StyleSheetNode.cpp
    Source/Core/StyleSheetNodeSelector.cpp
    Source/Core/StyleSheetNodeSelectorEmpty.cpp
    Source/Core/StyleSheetNodeSelectorFirstChild.cpp
    Source/Core/StyleSheetNodeSelectorFirstOfType.cpp
    Source/Core/StyleSheetNodeSelectorLastChild.cpp
    Source/Core/StyleSheetNodeSelectorLastOfType.cpp
    Source/Core/StyleSheetNodeSelectorNthChild.cpp
    Source/Core/StyleSheetNodeSelectorNthLastChild.cpp
    Source/Core/StyleSheetNodeSelectorNthLastOfType.cpp
    Source/Core/StyleSheetNodeSelectorNthOfType.cpp
    Source/Core/StyleSheetNodeSelectorOnlyChild.cpp
    Source/Core/StyleSheetNodeSelectorOnlyOfType.cpp
    Source/Core/StyleSheetParser.cpp
    Source/Core/StyleSheetSpecification.cpp
    Source/Core/SystemInterface.cpp
    Source/Core/Template.cpp
    Source/Core/TemplateCache.cpp
    Source/Core/Texture.cpp
    Source/Core/TextureDatabase.cpp
    Source/Core/TextureLayout.cpp
    Source/Core/TextureLayoutRectangle.cpp
    Source/Core/TextureLayoutRow.cpp
    Source/Core/TextureLayoutTexture.cpp
    Source/Core/TextureResource.cpp
    Source/Core/UnicodeRange.cpp
    Source/Core/URL.cpp
    Source/Core/Variant.cpp
    Source/Core/WidgetSlider.cpp
    Source/Core/WidgetSliderScroll.cpp
    Source/Core/WString.cpp
    Source/Core/XMLNodeHandler.cpp
    Source/Core/XMLNodeHandlerBody.cpp
    Source/Core/XMLNodeHandlerDefault.cpp
    Source/Core/XMLNodeHandlerHead.cpp
    Source/Core/XMLNodeHandlerTemplate.cpp
    Source/Core/XMLParser.cpp
    Source/Core/XMLParseTools.cpp
)

set(Controls_SRC_FILES
    Source/Controls/Clipboard.cpp
    Source/Controls/Controls.cpp
    Source/Controls/DataFormatter.cpp
    Source/Controls/DataQuery.cpp
    Source/Controls/DataSource.cpp
    Source/Controls/DataSourceListener.cpp
    Source/Controls/ElementDataGrid.cpp
    Source/Controls/ElementDataGridCell.cpp
    Source/Controls/ElementDataGridExpandButton.cpp
    Source/Controls/ElementDataGridRow.cpp
    Source/Controls/ElementForm.cpp
    Source/Controls/ElementFormControl.cpp
    Source/Controls/ElementFormControlDataSelect.cpp
    Source/Controls/ElementFormControlInput.cpp
    Source/Controls/ElementFormControlSelect.cpp
    Source/Controls/ElementFormControlTextArea.cpp
    Source/Controls/ElementTabSet.cpp
    Source/Controls/ElementTextSelection.cpp
    Source/Controls/InputType.cpp
    Source/Controls/InputTypeButton.cpp
    Source/Controls/InputTypeCheckbox.cpp
    Source/Controls/InputTypeRadio.cpp
    Source/Controls/InputTypeRange.cpp
    Source/Controls/InputTypeSubmit.cpp
    Source/Controls/InputTypeText.cpp
    Source/Controls/SelectOption.cpp
    Source/Controls/WidgetDropDown.cpp
    Source/Controls/WidgetSlider.cpp
    Source/Controls/WidgetSliderInput.cpp
    Source/Controls/WidgetTextInput.cpp
    Source/Controls/WidgetTextInputMultiLine.cpp
    Source/Controls/WidgetTextInputSingleLine.cpp
    Source/Controls/WidgetTextInputSingleLinePassword.cpp
    Source/Controls/XMLNodeHandlerDataGrid.cpp
    Source/Controls/XMLNodeHandlerTabSet.cpp
    Source/Controls/XMLNodeHandlerTextArea.cpp
)

set(Debugger_SRC_FILES
    Source/Debugger/Debugger.cpp
    Source/Debugger/ElementContextHook.cpp
    Source/Debugger/ElementInfo.cpp
    Source/Debugger/ElementLog.cpp
    Source/Debugger/Geometry.cpp
    Source/Debugger/Plugin.cpp
    Source/Debugger/SystemInterface.cpp
)

set(LuaCore_SRC_FILES
    Source/Core/Lua/Colourb.cpp
    Source/Core/Lua/Colourf.cpp
    Source/Core/Lua/Context.cpp
    Source/Core/Lua/ContextDocumentsProxy.cpp
    Source/Core/Lua/Document.cpp
    Source/Core/Lua/Element.cpp
    Source/Core/Lua/ElementAttributesProxy.cpp
    Source/Core/Lua/ElementChildNodesProxy.cpp
    Source/Core/Lua/ElementInstancer.cpp
    Source/Core/Lua/ElementStyleProxy.cpp
    Source/Core/Lua/ElementText.cpp
    Source/Core/Lua/Event.cpp
    Source/Core/Lua/EventParametersProxy.cpp
    Source/Core/Lua/GlobalLuaFunctions.cpp
    Source/Core/Lua/Interpreter.cpp
    Source/Core/Lua/Log.cpp
    Source/Core/Lua/LuaDocument.cpp
    Source/Core/Lua/LuaDocumentElementInstancer.cpp
    Source/Core/Lua/LuaElementInstancer.cpp
    Source/Core/Lua/LuaEventListener.cpp
    Source/Core/Lua/LuaEventListenerInstancer.cpp
    Source/Core/Lua/precompiled.cpp
    Source/Core/Lua/Rocket.cpp
    Source/Core/Lua/RocketContextsProxy.cpp
    Source/Core/Lua/Utilities.cpp
    Source/Core/Lua/Vector2f.cpp
    Source/Core/Lua/Vector2i.cpp
)

set(LuaControls_SRC_FILES
    Source/Controls/Lua/Controls.cpp
    Source/Controls/Lua/DataFormatter.cpp
    Source/Controls/Lua/DataSource.cpp
    Source/Controls/Lua/ElementDataGrid.cpp
    Source/Controls/Lua/ElementDataGridRow.cpp
    Source/Controls/Lua/ElementForm.cpp
    Source/Controls/Lua/ElementFormControl.cpp
    Source/Controls/Lua/ElementFormControlDataSelect.cpp
    Source/Controls/Lua/ElementFormControlInput.cpp
    Source/Controls/Lua/ElementFormControlSelect.cpp
    Source/Controls/Lua/ElementFormControlTextArea.cpp
    Source/Controls/Lua/ElementTabSet.cpp
    Source/Controls/Lua/LuaDataFormatter.cpp
    Source/Controls/Lua/LuaDataSource.cpp
    Source/Controls/Lua/SelectOptionsProxy.cpp
)

include_directories(.)

add_library(Rocket STATIC ${Core_SRC_FILES} ${Controls_SRC_FILES}
    ${Debugger_SRC_FILES} ${LuaCore_SRC_FILES} ${LuaControls_SRC_FILES})

target_link_libraries(Rocket freetype lua)
