set(SOURCES
    png.c
    pngerror.c
    pngget.c
    pngmem.c
    pngpread.c
    pngread.c
    pngrio.c
    pngrtran.c
    pngrutil.c
    pngset.c
    pngtrans.c
    pngwio.c
    pngwrite.c
    pngwtran.c
    pngwutil.c
)

include_directories(.)

add_library(png STATIC ${SOURCES})
target_link_libraries(png ${ZLIB_LIBRARIES})
